// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EditorRuntime - Real Cases > modifyNodes - batch modify all paragraphs > should modify all 16 paragraphs in a single call 1`] = `
"（雨点敲打着咖啡馆的玻璃窗，像无数细小的手指在弹奏着无声的钢琴。林晓坐在靠窗的位置，手中的咖啡已经凉了，她却浑然不觉。这是她第三次来到这家咖啡馆，每次都是同样的位置，同样的时间。）

（窗外雨丝如帘，街灯昏黄。咖啡馆内灯光柔和，墙上挂着旧照片，书架上摆满了书。空气里是咖啡香和旧书纸的味道。）

林晓：（内心独白）第一次来的时候，也是这样的雨夜。那天我刚结束一段五年的感情，整个人像是被掏空了。我点了一杯美式咖啡，就这样坐着，看着窗外的雨，直到打烊。

林晓：（继续独白）第二次来的时候，我遇到了他。穿着灰色风衣，坐在对面的位置。他一直在看书，偶尔抬头看看窗外。他的手指修长，翻书的动作优雅从容。

林晓：（独白）今天，我又来了。雨还是那样下着，咖啡馆还是那样安静。我不知道自己在期待什么，也许只是习惯了这种孤独的仪式感。

（门上的风铃响了，有人推门进来。林晓下意识地抬头，心跳突然漏了一拍。）

（风铃叮咚作响。一个身影站在门口，雨伞滴着水，灯光勾勒出他的轮廓。）

林晓：（低声）是他。

（他收起雨伞，抖了抖身上的水珠，然后径直走向她。这一次，他没有坐在对面的位置，而是在她面前停了下来。）

陈默：（声音低沉温和）我可以坐这里吗？

（林晓点了点头，喉咙有些发干。窗外的雨声似乎变小了，咖啡馆里的音乐也变得清晰起来。）

陈默：（眼中带着笑意）我注意到你每次都在这里。

林晓：（凝视着他，内心独白）他的眼睛是深褐色的，像秋天的落叶，温暖而深邃。他的鼻梁挺直，唇线分明，微笑时眼角有细微的皱纹，更添了几分沧桑感。我忽然觉得这个人似曾相识，却又分明是第一次见面。

陈默：（伸出手）我叫陈默。很高兴终于能和你说话。我观察你三次了，每次你都这样静静地坐着看雨，若有所思，若有所待。

（林晓握住他的手，感受到他掌心的温度。他的手温暖，却有薄茧，像是经常写字或弹琴的人。雨还在下，但咖啡馆里忽然觉得温暖如春，先前的孤独寂寥，竟然悄然消散了。）

（旁白）也许，有些相遇注定要在雨夜发生。就像有些故事，注定要从一句简单的问候开始。
"
`;

exports[`EditorRuntime - Real Cases > modifyNodes - batch remove paragraphs > should remove 7 paragraphs in a single call 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<root>
  <p id="lwap">
    <span id="m1v0">杭州，一座被诗意浸润的千年古都，静静地依偎在钱塘江畔，宛如一幅徐徐展开的水墨长卷。这里不仅是浙江省的政治、经济、文化中心，更是中国七大古都之一，承载着2200余年的历史记忆。从南宋临安的繁华盛景到今日数字经济的创新高地，杭州始终以"人间天堂"的美誉，向世界展示着东方文明的独特魅力。</span>
  </p>
  <h2 id="m7fb">
    <span id="mczm">地理与气候</span>
  </h2>
  <p id="mijx">
    <span id="mo48">杭州地处钱塘江下游，京杭大运河南端，东临杭州湾，西接天目山。全市总面积16850平方公里，常住人口超过1200万。杭州属于亚热带季风气候，四季分明，雨量充沛，年平均气温17.8℃，气候宜人。</span>
  </p>
  <h2 id="mtoj">
    <span id="mz8u">历史文化</span>
  </h2>
  <p id="n4t5">
    <span id="nadg">杭州是吴越文化和南宋文化的发源地之一。公元1138年，南宋定都临安（今杭州），使其成为当时世界上最繁华的城市之一。杭州拥有丰富的历史文化遗产，包括西湖文化景观、京杭大运河、良渚古城遗址等世界文化遗产。</span>
  </p>
  <p id="vbpc">
    <span id="vh9n">南宋时期（1127-1279年）是杭州历史上的黄金时代。宋室南渡后定都临安（今杭州），使其成为当时世界上人口最多、经济最繁荣的城市之一。马可·波罗在游记中称杭州为"世界上最美丽华贵之天城"。南宋时期杭州的工商业、文化艺术、科学技术都达到了空前的高度：</span>
  </p>
  <ul id="t5t2">
    <li id="tbdd">
      <span id="tgxo" bold="true">经济繁荣</span>
      <span id="tmhz">：丝绸、瓷器、茶叶贸易发达，出现了世界上最早的纸币"交子"</span>
    </li>
    <li id="ts2a">
      <span id="txml" bold="true">文化鼎盛</span>
      <span id="u36w">：宋词达到艺术高峰，苏轼、柳永、李清照等文人雅士云集</span>
    </li>
    <li id="u8r7">
      <span id="uebi" bold="true">科技创新</span>
      <span id="ujvt">：活字印刷术、指南针、火药等重大发明得到广泛应用</span>
    </li>
    <li id="upg4">
      <span id="uv0f" bold="true">城市建设</span>
      <span id="v0kq">：形成了"前朝后市"的格局，御街、清河坊等商业区繁华异常</span>
    </li>
  </ul>
  <h2 id="nfxr">
    <span id="nli2">西湖风光</span>
  </h2>
  <p id="nr2d">
    <span id="nwmo">西湖是杭州的灵魂，也是中国最著名的风景名胜之一。西湖十景（如苏堤春晓、断桥残雪、雷峰夕照等）闻名遐迩。西湖不仅自然风光秀丽，更承载着深厚的文化内涵，历代文人墨客在此留下了无数诗词歌赋。</span>
  </p>
</root>"
`;

exports[`EditorRuntime - Real Cases > modifyNodes - remove then add > should remove 13 paragraphs then insert a list > insert new 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<root>
  <p id="wihj">
    <span id="wo1u">杭州是中国著名的旅游城市，素有"人间天堂"的美誉。这里既有美丽的自然风光，又有深厚的历史文化底蕴。</span>
  </p>
  <h2 id="wtm5">
    <span id="wz6g">必游景点</span>
  </h2>
  <ul id="fiv4">
    <li id="foff">
      <span id="ftzq">西湖风景区：杭州的灵魂，世界文化遗产</span>
    </li>
    <li id="fzk1">
      <span id="g54c">灵隐寺：杭州最著名的佛教寺庙</span>
    </li>
    <li id="gaon">
      <span id="gg8y">西溪国家湿地公园：中国第一个国家湿地公园</span>
    </li>
    <li id="glt9">
      <span id="grdk">宋城：以宋代文化为主题的大型主题公园</span>
    </li>
  </ul>
  <h2 id="562n">
    <span id="5bmy">美食推荐</span>
  </h2>
</root>"
`;

exports[`EditorRuntime - Real Cases > modifyNodes - remove then add > should remove 13 paragraphs then insert a list > remove 13 paragraphs 1`] = `
"<?xml version="1.0" encoding="UTF-8"?>
<root>
  <p id="wihj">
    <span id="wo1u">杭州是中国著名的旅游城市，素有"人间天堂"的美誉。这里既有美丽的自然风光，又有深厚的历史文化底蕴。</span>
  </p>
  <h2 id="wtm5">
    <span id="wz6g">必游景点</span>
  </h2>
  <h2 id="562n">
    <span id="5bmy">美食推荐</span>
  </h2>
</root>"
`;
